...
    ///
    /// - Parameter page: The `AppPages` enum representing the view to display.
    /// - Returns: A SwiftUI view corresponding to the given page.
    @MainActor @ViewBuilder
    func build(page: AppPages) -> some View {
        let coinService: CoinService = {
            if ProcessInfo.processInfo.environment["QA_ENVIRONMENT"] == "true" {
                return MockCoinNetworkService(urlString: "Mock")
            } else {
                return CoinNetworkService(networkManager: networkManager)
            }
        }()
        switch page {
...
