...
                        .frame(width: 20, height: 20)
                }
            }
            .frame(maxWidth: .infinity, alignment: .leading)
            .padding(20)
            
            Text("Coin Detail")
                .foregroundStyle(Color(.textPrimary))
                .robotoFont(size: 16, weight: .bold)
                .frame(maxWidth: .infinity)
                .padding(.top, 4)
        }
        .background {
...
