...
        VStack(spacing: 20) {
            HStack(spacing: 10) {
                Image("Logo")
                    .resizable()
                    .frame(width: 30, height: 30)
                
                Text("Crypto Coins")
                    .robotoFont(size: 24, weight: .bold)
                    .lineLimit(1)
                    .fixedSize(horizontal: true, vertical: false)
                    .frame(maxWidth: .infinity, alignment: .leading)
            }
            
...
